[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
	"uxibxx",
	"uxibxx.features",
	"uxibxx.boards",
	"uxibxx.cli",
	"uxibxx.types"
	]

[project]
name = "uxibxx-io-board"
version = "0.4.3"

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Greg Courville", email = "greg.courville@czbiohub.org"}]
maintainers = [{name = "Greg Courville", email = "greg.courville@czbiohub.org"}]
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
docs = ["sphinx"]

[project.scripts]
uxibtool = "uxibxx.cli:_cli_entry"
